[tool.poetry]
name = "blog"
version = "0.1.0"
description = "The source code for stonecharioteer.com using sphinx and Furo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
furo = "2022.6.21"
alabaster = "0.7.12"
babel = "2.10.3"
backcall = "0.2.0"
beautifulsoup4 = "4.11.1"
build = "0.8.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
click = "8.1.3"
colorama = "0.4.5"
cssselect = "1.1.0"
docutils = "0.17.1"
executing = "0.9.1"
fastjsonschema = "2.16.1"
feedgen = "0.9.0"
idna = "3.3"
imagesize = "1.4.1"
invoke = "1.7.1"
jinja2 = "3.0.3"
livereload = "2.6.3"
lxml = "4.9.1"
markdown-it-py = "2.1.0"
markupsafe = "2.1.1"
mdit-py-plugins = "0.3.0"
mdurl = "0.1.1"
mistune = "2.0.4"
myst-parser = "0.18.0"
nest-asyncio = "1.5.5"
packaging = "21.3"
parso = "0.8.3"
pep517 = "0.12.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pip-tools = "6.8.0"
prompt-toolkit = "3.0.30"
psutil = "5.9.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.12.0"
pyparsing = "3.0.9"
pyquery = "1.4.3"
pyrsistent = "0.18.1"
python-dateutil = "2.8.2"
pytz = "2022.1"
pyyaml = "6.0"
pyzmq = "23.2.0"
requests = "2.28.1"
six = "1.16.0"
snowballstemmer = "2.2.0"
soupsieve = "2.3.2.post1"
sphinx = "4.5.0"
sphinx-autobuild = "2021.3.14"
sphinx-basic-ng = "0.0.1a12"
sphinx-last-updated-by-git = "0.3.2"
sphinx-notfound-page = "0.8.3"
sphinx-panels = "0.6.0"
sphinx-tabs = "3.4.0"
sphinx-togglebutton = "0.3.2"
sphinx-design = "0.2.0"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.0"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
sphinxcontrib-youtube = "1.2.0"
sphinxemoji = "0.2.0"
sphinxext-opengraph = "0.6.3"
sphinxext-rediraffe = "0.2.7"
tabulate = "0.8.10"
tomli = "2.0.1"
tornado = "6.2"
traitlets = "5.3.0"
typing-extensions = "4.3.0"
urllib3 = "1.26.10"
watchdog = "2.1.9"
wcwidth = "0.2.5"
yasfb = "0.8.0"
zipp = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
